k8s/overlays/production/deployment-patches.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: server
        imagePullPolicy: Always
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client
spec:
  replicas: 2
  template:
    spec:
      containers:
      - name: client
        imagePullPolicy: Always
